[RPG-7] OAuth2.0 - Google, kakao 로그인 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.hikari.jdbc-url=jdbc:mariadb://database-1.cb86ncporwyz.ap-nort
 spring.datasource.hikari.username=ENC(FyQNfY8ZO6wNR7qVN27jBg==)
 spring.datasource.hikari.password=ENC(kZjJQJhrylynPhZ7g1ptx0V2iisQ+PwF)
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
@@ -13,3 +13,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 jasypt.encryptor.bean=jasyptStringEncryptor
 jasypt.encryptor.property.prefix=ENC(
 jasypt.encryptor.property.suffix=)
+
+spring.profiles.include=oauth
