--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compile group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.2'
-	// compile group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
+//	compile 'io.jsonwebtoken:jjwt-api:0.11.2'
+//	runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
 
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
