--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compile group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.2'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
-//	compile 'io.jsonwebtoken:jjwt-api:0.11.2'
-//	runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.2'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
@@ -34,6 +32,9 @@ dependencies {
 	// DB
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// open api 3.0 + swagger
+	implementation 'org.springdoc:springdoc-openapi-ui:1.5.8'
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
