--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,19 @@ spring.datasource.hikari.jdbc-url=jdbc:mariadb://database-1.cb86ncporwyz.ap-nort
 spring.datasource.hikari.username=ENC(FyQNfY8ZO6wNR7qVN27jBg==)
 spring.datasource.hikari.password=ENC(kZjJQJhrylynPhZ7g1ptx0V2iisQ+PwF)
 
+# JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+# JASYPT
 jasypt.encryptor.bean=jasyptStringEncryptor
 jasypt.encryptor.property.prefix=ENC(
 jasypt.encryptor.property.suffix=)
 
+# OAUTH
 spring.profiles.include=oauth
+
+# Swagger
