--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -35,6 +37,13 @@ dependencies {
 
 	// open api 3.0 + swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.5.8'
+
+    // jwt
+    compile 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtime 'io.jsonwebtoken:jjwt-impl:0.11.2',
+            // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
+            //'org.bouncycastle:bcprov-jdk15on:1.60',
+            'io.jsonwebtoken:jjwt-jackson:0.11.2' // or 'io.jsonwebtoken:jjwt-gson:0.11.2' for gson
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
